@@ -1,5 +1,36 @@
 local Class = createClass{"MainLoader"}
 
+local Class = require("classBuilder"){name="MainLoader",bases={"core.Object"}};
+
+--[[
+Class: MainLoader
+
+Class used as the main entry point to execute the software logic. The behavior
+of the software will then depend on the provided arguments in the constructor method.
+
+This class inherits from <core.Object>.
+
+Arguments:
+	The loader will accept the following arguments and flags:
+
+	*--mode xxxx* : provide the core execution mode of the software, depending on this value the behavior of
+the software will be completely different. Current possible values are:
+ 	- "lunagen" : used to perform binding generation for a library.
+
+  *--log xxxx* : used to specify the desired target log file for the execution of the software. 
+]]
+
+--[=[
+--[[
+Constructor: MainLoader
+
+Create an instance of the class.
+
+Parameters:
+	 options.args or options[1] - list of arguments that should be passed to the loader for parsing.
+]]
+function MainLoader(options)
+]=]
 function Class:initialize(options)
 	self._args = options.args or options[1] or {}
 
