@@ -1,7 +1,8 @@
-local Class = createClass{name="DataMap",bases="core.Object"};
+local Class = createClass{"DataMap"}
 
+local Set = require "std.Set"
 
-local split = function(str,sep)
+local split = function(str,sep)	
 	local list = {}
 	
 	local i1,i2,last
@@ -27,7 +28,7 @@ end
 
 
 --[[
-Class: core.DataMap
+Class: utils.DataMap
 
 Simple Data map representation. This class is used to store and retrieve
 key,value pairs in a hierarchical structure. Internally the data is saved
@@ -63,16 +64,14 @@ function Class:getTable()
 end
 
 --[[
-Function: setTable
+Function: clear
 
-Assign the table data holder for this data map.
-
-Parameters:
-	tt - The table data.
+Clear the content of the datamap completely.
 ]]
-function Class:setTable(tt)
-	self.assert.Table(tt)
-	self._data = tt
+function Class:clear()
+	for k in pairs (self._data) do
+		self._data [k] = nil
+	end	
 end
 
 --[[
@@ -93,6 +92,7 @@ function Class:getSubContainer(key)
 	
 	-- cut the key with the separator
 	local list, last = split(key,self._sep)
+	
 	local cont = self._data
 	for _,sub in ipairs(list) do
 		if type(cont[sub])~="table" then
@@ -134,6 +134,23 @@ function Class:hasKey(key)
 end
 
 --[[
+Function: tryGet
+
+Method called to try to get a value from the datamap.
+If the value is found it is passed as argument to
+the provided function to be executed.
+If not found, then calls the notSetFunc if provided.
+]]		
+function Class:tryGet(key,foundFunc,missingFunc)
+	local val = self:get(key)
+	if val then
+		foundFunc(val,key)
+	elseif missingFunc then
+		missingFunc()
+	end
+end
+
+--[[
 Function: set
 
 Set a value of this datamap.
@@ -145,11 +162,22 @@ Parameters:
 ]]
 function Class:set(key,value)
 	local cont, last = self:getSubContainer(key)
-	if cont[last] ~= value then
-		cont[last] = value
-		return true;
-	end
-	return false -- value was not changed.
+	cont[last] = value
+end
+
+--[[
+Function: setNumeric
+
+Method used to set a numeric key and avoid any number truncation.
+Parameters:
+	prefix - The prefix for this key
+	key - The key where to set the value may contain separators.
+	value - The value to set.
+]]
+function Class:setNumeric(prefix,key,value)
+	local fkey = prefix .. math.floor(key)
+	local cont, last = self:getSubContainer(fkey)
+	cont[key] = value
 end
 
 --[[
@@ -188,13 +216,61 @@ function Class:get(key,value)
 end
 
 --[[
+Function: pick
+
+Try to pick any of the provided keys from the datamap but not throwing an error
+in case nothing is found.
+
+Parameters:
+	multiple keys.
+  
+Returns:
+	The first retrieved value or nil if nothing is found.
+]]
+function Class:pick(...)
+	local val;
+	for _,key in ipairs{...} do 
+		val = self:get(key)
+		if val~=nil then
+			return val
+		end
+	end
+end
+
+--[[
+Function: fetch
+
+Fecth a key value from the datamap.
+This method is similar to the get method except that it will ensure there
+is a value to read and trigger an error otherwise. Thus the default value is 
+not needed here.
+
+Parameters:
+	... - All the keys that should be fetched, in a fixed order. The first key found is returned.
+  
+Returns:
+	The value read under the given key, and the key used.
+]]
+function Class:fetch(...)
+	local val;
+	for _,key in ipairs{...} do 
+		val = self:get(key)
+		if val~=nil then
+			return val
+		end
+	end
+	
+	self:throw(val~=nil,"Could not fetch value for any of the keys: ", {...})
+end
+
+--[[
 Function: merge
 
 Merge the content of the argument table into this datamap.
 
 Parameters:
 	t - The table or other <utils.DataMap> object to be merged.
-	perfix - (for internal use) Specify the prefix to use when saving a given subtable.
+	prefix - (for internal use) Specify the prefix to use when saving a given subtable.
 ]]
 function Class:merge(t,prefix)
 	self:check(type(t)=="table","Invalid table argument")
@@ -206,8 +282,23 @@ function Class:merge(t,prefix)
 	prefix = prefix and prefix.."." or ""
 	
 	for key,val in pairs(t) do
+		
 		if type(val)=="table" and not val._CLASSNAME_ then
 			self:merge(val,prefix .. key)
+		elseif type(val)=="table" and val._CLASSNAME_ and val:isInstanceOf(Set) then
+			-- merge the value as a Set:
+			local list = self:get(prefix..key)
+			if not list then
+				self:set(prefix..key,val)
+			else
+				self:check(list:isInstanceOf(Set),"Trying to merge Set object with ",list)
+				for _, obj in val:sequence() do
+					list:push_back(obj)
+				end
+			end
+		elseif type(key)=="number" and math.floor(key)~=key then
+			--The key number contains a "." symbol !
+			self:setNumeric(prefix,key,val)
 		else
 			-- write the value normally:
 			self:set(prefix .. key, val)
@@ -248,23 +339,44 @@ function Class:getSubMap(key)
 end
 
 --[[
-Function: fetch
+Function: sequence
 
-Fecth a key value from the datamap.
-This method is similar to the get method except that it will ensure there
-is a value to read and trigger an error otherwise. Thus the default value is 
-not needed here.
-
-Parameters:
-	key - THe key to read from.
+Method used to iterate on all entries in a given DataMap.
   
 Returns:
-	The value read under the given key.
+	An iterator function that will return the full key, value, parent container and short key for each item in the DataMap.
 ]]
-function Class:fetch(key)
-	local val = self:get(key)
-	self:check(val~=nil,"Could not fetch value for key: ", key)
-	return val
+function Class:sequence()
+	local yield = coroutine.yield
+	
+	local function walker(prefix,data,done)
+		data = data or self._data
+		done = done or {}
+		prefix = prefix or ""
+	
+		if prefix~="" then
+			prefix = prefix.."."
+		end
+		if done[data] then
+			return -- this table was already traversed.
+		end
+		
+		-- mark the table as traversed right now to avoid cyclic links.
+		done[data]=true
+		
+		for k,v in pairs(data) do
+			if self:isInstanceOf(Class,v) then
+				-- the value is a sub DataMap or an ordinary table: keep walking in the sub values:
+				walker(prefix..k,v:getTable(),done)
+			elseif (type(v)=="table" and not v._CLASSNAME_) then
+				walker(prefix..k,v,done)
+			else
+				yield(prefix..k,v,data,k)
+			end
+		end
+	end	
+	
+	return coroutine.wrap(walker)
 end
 
 return Class
