@@ -25,3 +25,4 @@
 - Added additional core modules and lfs lib.
 - Fixed issue with throw method.
 - Added support for documentation generation.
+- Moved DataMap in utils.
